# wxmacmolplt

./: .directory_history  .gitignore  .travis.yml  AUTHORS  INSTALL  LICENSE  MacMolPlt_Manual.html  Makefile.am  NOTES  README  README.md  acinclude.m4  autogen.sh  bootstrap  configure.ac  description.html  downloads.html  index.html  params.json  resource.h  samples.html  wxMacMolPlt.kdevelop  wxMacMolPlt.rc  wxMacMolPlt.sln  wxMacMolPlt.vcproj  wxMacMolPlt_vc13.sln  wxMacMolPlt_vc13.vcproj
.github/: ISSUE_TEMPLATE.md
Manual_pages/: .directory_history  General_Description.html  LLM.html  MacMolPlt_Files.html  MacMolPlt_Surfaces.html  MacMolPlt_Windows.html  Version_History.html  WalkThrough.html  builder.html  wxmacmolplt.1
Manual_pages/CVS/: Entries  Repository  Root
VS14-installer/VS13_deployment/: VS13_deployment.isl  VS13_deployment.isproj
Win32-installer/: wxMacMolPlt setup.vdproj
debian/: changelog  control  copyright  files  menu  rules
resources/: Doxyfile  Info.plist  MacMolPlt.Prefs.xml  MacMolPlt.icns  amino_acids.cml  bindoc.icns  organics.cml  prefs.icns  solvents.cml  system_structures.cml  text-doc.icns  wxMacMolPlt.rpm.spec  wxmacmolplt.1  wxmacmolplt.appdata.xml  wxmacmolplt.desktop
resources/fonts/: COPYRIGHT.BITSTREAM
resources/shaders/: perpixel_dirlight_f.glsl  perpixel_dirlight_v.glsl  shadows_f.glsl  shadows_v.glsl
samples/: sample.irc
src/: .directory_history  AtomTypeList.cpp  AtomTypeList.h  BFiles.cpp  BFiles.h  BasisSet.cpp  BasisSet.h  CML.cpp  CML.h  ChooseDialog.cpp  ChooseDialog.h  DataClasses.cpp  FILES  Files.cpp  Files.h  FloatSlider.cpp  FloatSlider.h  Frame.cpp  Frame.h  GaussHermite.cpp  GaussHermite.h  Geometries.cpp  Geometries.h  GlobalExceptions.h  Globals.h  Gradient.cpp  Gradient.h  InputData.cpp  InputData.h  InputWizard.cpp  InputWizard.h  Internals.cpp  Internals.h  MEP.cpp  MMPPrefs.cpp  MMPPrefs.h  Makefile.am  Math3D.cpp  Math3D.h  MolDisplayWin.cpp  (+114 more)
src/ming-src/: Makefile.in  ming.h  ming_config.h  ming_config.h.in  mingpp.h  movie.c  movie.h  movieclip.c  shape_util.c
src/ming-src/actioncompiler/: Makefile.in  compile.c  compileaction.c  lex.swf4.c  lex.swf5.c  swf4compiler.flex  swf4compiler.tab.c  swf4compiler.tab.h  swf5compiler.flex  swf5compiler.tab.c  swf5compiler.tab.h
src/ming-src/blocks/: Makefile.in  action.c  bitmap.c  blocktypes.h  browserfont.c  error.h  fileattrs.c  filter.h  flv.c  font.c  fromswf.c  gifdbl.c  linestyle.c  placeobject.c  pngdbl.c  scalinggrid.c  scriptlimits.c  shape.c  sprite.c  tabindex.c  text.c  videostream.c
src/shaders/: perpixel_dirlight_f.glsl  perpixel_dirlight_v.glsl
src/xpms/: arrow.xpm  hand.xpm  rect_lasso.xpm  sp.xpm  view.xpm
wxMacMolPlt.xcodeproj/: .gitignore  project.pbxproj
wxMacMolPlt_vs19/: wxMacMolPlt Installer.vdproj  wxMacMolPlt.vcxproj  wxMacMolPlt_vs19.sln
