SUBDIRS = src
nobase_dist_pkgdata_DATA = resources/MacMolPlt.Prefs.xml
	resources/fonts/arial1.glf LICENSE \
	MacMolPlt_Manual.html Manual_pages/WalkThrough.html \
	Manual_pages/2D_General_Dialog.gif Manual_pages/2D_MEP.gif \
	Manual_pages/2D_MEP_Dialog.gif Manual_pages/2D_Orbital.gif \
	Manual_pages/2D_Orbital_Dialog.gif Manual_pages/2D_TED.gif \
	Manual_pages/2D_TED_Dialog.gif Manual_pages/3D_General_Dialog.gif \
	Manual_pages/3D_Orbital.jpg Manual_pages/3D_Orbital_Dialog.gif \
	Manual_pages/3D_TED.jpg Manual_pages/3D_TED_Dialog.gif \
	Manual_pages/Bonds_Win.gif Manual_pages/Coords_Win.gif \
	Manual_pages/Create_Surface.gif Manual_pages/General_Description.html \
	Manual_pages/IB_Win.gif Manual_pages/LLM.html \
	Manual_pages/MEP_3D.jpg Manual_pages/MEP_3D_Dialog.gif \
	Manual_pages/MacMolPlt_Files.html Manual_pages/MacMolPlt_Surfaces.html \
	Manual_pages/MacMolPlt_Windows.html Manual_pages/Version_History.html \
	Manual_pages/water.jpg Manual_pages/sample-mol.jpg \
	samples/water.log samples/sample.irc
EXTRA_DIST = wxMacMolPlt.kdevelop LICENSE  \
	wxMacMolPlt.vcproj     wxMacMolPlt.rc \
	wxMacMolPlt.xcodeproj/project.pbxproj \
	resources/MacMolPlt.Prefs.xml         \
	resources/fonts/arial1.glf			\
	MacMolPlt_Manual.html Manual_pages/WalkThrough.html \
	Manual_pages/2D_General_Dialog.gif Manual_pages/2D_MEP.gif \
	Manual_pages/2D_MEP_Dialog.gif Manual_pages/2D_Orbital.gif \
	Manual_pages/2D_Orbital_Dialog.gif Manual_pages/2D_TED.gif \
	Manual_pages/2D_TED_Dialog.gif Manual_pages/3D_General_Dialog.gif \
	Manual_pages/3D_Orbital.jpg Manual_pages/3D_Orbital_Dialog.gif \
	Manual_pages/3D_TED.jpg Manual_pages/3D_TED_Dialog.gif \
	Manual_pages/Bonds_Win.gif Manual_pages/Coords_Win.gif \
	Manual_pages/Create_Surface.gif Manual_pages/General_Description.html \
	Manual_pages/IB_Win.gif Manual_pages/LLM.html \
	Manual_pages/MEP_3D.jpg Manual_pages/MEP_3D_Dialog.gif \
	Manual_pages/MacMolPlt_Files.html Manual_pages/MacMolPlt_Surfaces.html \
	Manual_pages/MacMolPlt_Windows.html Manual_pages/Version_History.html \
	Manual_pages/water.jpg Manual_pages/sample-mol.jpg \
	samples/water.log samples/sample.irc
